Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0 RC, 5.5.0, 5.5.1, 5.6.0 Alpha, 5.6.0
-
None
-
Mac OS 10.10.x, 10.11.x
Retina Display (e.g. iMac Retina)
Windows 8.1
High DPI display (with QT_DEVICE_PIXEL_RATIO=auto)
-
-
65aff4dc422f53faa44e961850cb4f1e4501a8c7
Description
Simple steps to reproduce:
- Create new widget with Qt Designer
- Add QLabel to widget
- Set pixmap of QLabel to some bitmap file (e.g. the Qt logo)
- Set property 'scaledContents' to 'true'
Bitmap is scaled down but still about double as large as it should be (see screenshot).
Affects both Qt Designer as well as Qt applications using QLabels with bitmaps.
Attachments
Issue Links
- is duplicated by
-
QTBUG-47844 [Regression] QLabel scaledContents stretches its pixmap way beyond its size
-
- Closed
-
-
QTBUG-49040 QLabel pixmap incorrectly scaled on Retina display
-
- Closed
-
-
QTBUG-49108 QLabel setpixmap is creating a pixmap several times larger than the label... (Regression)
-
- Closed
-