Workaround for cropped images on Retina displays (QTBUG-46846), [#bugs:118].

The bug can also be reproduced on displays without high pixel density
by setting QT_DEVICE_PIXEL_RATIO=2.